Don't use DF text during animations

Previously, we enabled distance-field text during animations in
order to improve GPU raster performance. Now that GPU raster
handles animations the same way as SW - only rastering at specific
scales and interpolating, this optimization isn't necessary.

In certain cases, the optimization causes visual differences
between non-animating and animating content, so removing this
improves our correctness as well.

R=ajuma@chromium.org
BUG=668723
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2605273003
Cr-Commit-Position: refs/heads/master@{#441204}

Former-commit-id: b04a4a62bc244a238e63c6862be0ed6dfe84a837